Jenkins/K8s/templates/weatherapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-service
spec:
  type: NodePort
  selector:
    app: weatherapp
  ports:
    - port: 80
      targetPort: 80
